# ops1

./: .gitignore  Text.txt
1/: bootloader.c
A1/: Makefile  bootloader.c  bootloader.s  bootloader_backup.c  bootloader_daniel.c
A2/: shell.c
A3/: CMakeLists.txt  Makefile  client  server
A3/cli/: client.c
A3/include/common/: Acceptor.h  FileTransfer.h  Path.h  Program.h  Reader.h  RemoteShell.h  Shell.h  Socket.h  String.h  Utils.h  Vector.h
A3/src/cli/: client.c
A3/src/common/: Acceptor.c  FileTransfer.c  Path.c  Program.c  RemoteShell.c  Shell.c  Socket.c  String.c  Vector.c
A3/src/srv/: server.c
A3/srv/: server.c
A3/test/: Test.c
A4/: CMakeLists.txt  Makefile
A4/include/common/: String.h  Vector.h
A4/src/common/: Array.c  Path.c  String.c  Utils.c  Vector.c
A4/src/ult/: Ult.c
A4/test/: Test.c  TestServer.c  UltTest.c
A5/: CMakeLists.txt  Makefile  tcd.c
A5/include/common/: Pipe.h
A5/include/ult/: Ult.h
A5/src/tcd/: tcd.c
A5/test/: TestFramework.h
A6/: CMakeLists.txt  Makefile  Utils.c  Utils.h  Vector.c  dedup  dedup.c  dict.c  dict.h  filesystem.c  filesystem.h  install_fuse.sh  log.txt
A6/include/common/: Dict.h  Program.h  RemoteShell.h  Socket.h  Vector.h
A6/include/filesystem/: DedupLayer.h  Filesystem.h
A6/src/common/: Dict.c  Pipe.c  Reader.c  RemoteShell.c  Vector.c
A6/src/filesystem/: Dedup.c  DedupLayer.c  Filesystem.c
A6/test/: FilesystemTest.c  TestServer.c
beispiele/dup/: dup.c
